Day-image alignment fix (mobile)

--- a/source/sass/components/_gallery.scss
+++ b/source/sass/components/_gallery.scss
@@ -51,6 +51,10 @@
 
 .gallery__item-image {
   margin-bottom: -24px;
+
+  &--day {
+    width: 100%;
+  }
 }
 
 .gallery__post-author {
